Alpha v2.9.7 - Better match divider behaviour, better record visibility, various other fixes and tweaks, removed herobrine

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -78,6 +78,10 @@ body {
   transition: 0.3s;
   
 }
+
+#finishedcounter{
+  filter: drop-shadow(1px 0px 3px #000000);
+}
 #ancientimage{
   transform: translateY(20px);
   opacity: 60%;
